Changed API_Campaigns_Id to be one method Added secure cookie random []byte generation Changed sidebar css Fixed footer alignment (may consider making separate template)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -65,3 +65,6 @@ footer > p {
 .header {
 	margin-top:10px;
 }
+.sidebar {
+	padding-left:0px;
+}
